# cdktf-gcp-functionv2

./: .env.example  .gitignore  .projenrc.ts  README.md  cdktf.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml
src/: main.ts
src/stacks/: my-stack.ts
stacks/: functionv2_stack.py
